# fhe-biometrics

./: .gitignore  LICENSE  README.md  pyproject.toml
client/: Cargo.toml  __init__.py
data/: process.ini
meeting-notes/: 2023-03-15-launch-meeting.md  2023-04-26-timothee-is-out.md
notebooks/: BestShiftedHammingDistance.ipynb  FirstGames.ipynb  Lab.ipynb  OpenCV.ipynb  PlayWithKeys.ipynb  Profiling.ipynb  Save-Load-Client-Server.ipynb  TODO.txt  Untitled.ipynb  ZeroIsSixtine.ipynb  feedback.txt  main.rs
server/: Cargo.toml  app.py  iris.py  iris_matcher.py  utils.py
tests/server/: test_iris.py  test_iris_matcher.py
